// Copyright Â© 2017-2018 Stratumn SAS
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program. If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

import "github.com/stratumn/go-indigonode/cli/grpc/ext/ext.proto";

package stratumn.indigonode.app.indigo.store;

option go_package = "github.com/stratumn/go-indigonode/app/indigo/pb/store;store";

message Link {
    bytes data = 1 [
        (stratumn.indigonode.cli.ext.field_desc) = "JSON-encoded link bytes"
    ];
}

message LinkHash {
    bytes data = 1 [
        (stratumn.indigonode.cli.ext.field_desc) = "32-bytes link hash"
    ];
}

message LinkHashes {
    repeated LinkHash link_hashes = 1 [
        (stratumn.indigonode.cli.ext.field_desc) = "Link hashes"
    ];
}

message Segment {
    bytes data = 1 [
        (stratumn.indigonode.cli.ext.field_desc) = "JSON-encoded segment bytes"
    ];
}

message Segments {
    repeated Segment segments = 1 [
        (stratumn.indigonode.cli.ext.field_desc) = "JSON-encoded segments bytes"
    ];
}

message Evidence {
    bytes data = 1 [
        (stratumn.indigonode.cli.ext.field_desc) = "JSON-encoded evidence bytes"
    ];
}

message Evidences {
    repeated Evidence evidences = 1 [
        (stratumn.indigonode.cli.ext.field_desc) = "JSON-encoded evidences bytes"
    ];
}
